k8s/ingress/ingress-cannon.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cannon-ingress
  annotations:
    nginx.ingress.kubernetes.io/configuration-snippet: |
      rewrite ^/api/(.*) /$1 break;
spec:
  rules:
    - host: www.classcipe.com
      http:
        paths:
          - pathType: Prefix
            path: /api/
            backend:
              service:
                name: cannon
                port:
                  number: 8080
